--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "cellUniqueIdByVincent": "6ae77"
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "cellUniqueIdByVincent": "bb5fe"
    },
@@ -191,7 +191,7 @@
        "4  Wonderful! I made this for a &#34;Chili/Stew&#...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {
     "cellUniqueIdByVincent": "d8cd6"
    },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "cellUniqueIdByVincent": "315e1"
    },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "cellUniqueIdByVincent": "21d4c"
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "cellUniqueIdByVincent": "bdf9a"
    },
@@ -611,7 +611,7 @@
        "4  Wonderful! I made this for a &#34;Chili/Stew&#...  Soups & Chilis  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "cellUniqueIdByVincent": "3a4a8"
    },
@@ -649,7 +649,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,9 +660,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "cellUniqueIdByVincent": "38556"
+   },
+   "outputs": [],
+   "source": [
+    "#drop null values\n",
+    "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "cellUniqueIdByVincent": "0ef58"
+   },
+   "outputs": [],
+   "source": [
+    "#Save df to cleaned csv\n",
+    "df.to_csv('cleaned_recipes.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "cellUniqueIdByVincent": "3c816"
    },
    "outputs": [],
    "source": []
