Final for streamlink deployment

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "05307660",
    "metadata": {
     "cellUniqueIdByVincent": "1d790"
    },
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c7ee6a2d",
    "metadata": {
     "cellUniqueIdByVincent": "c17df"
@@ -198,7 +199,7 @@
        "4  Wonderful! I made this for a &#34;Chili/Stew&#...  Soups & Chilis  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "aafcc041",
    "metadata": {
     "cellUniqueIdByVincent": "792fe"
    },
@@ -231,7 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "id": "ce3fdfd2",
    "metadata": {
     "cellUniqueIdByVincent": "9111d"
    },
@@ -324,7 +327,7 @@
        "4            1          7            0      0         820  Soups & Chilis"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "3ddaae33",
    "metadata": {
     "cellUniqueIdByVincent": "75d4a"
    },
@@ -354,77 +358,77 @@
       "Best CV Score (neg MSE) for Soups & Chilis: -6401.183624827278\n",
       "Test MSE for Soups & Chilis: 6592.671553898572\n",
       "Test R^2 Score for Soups & Chilis: 0.7076316932657764\n",
-      "Model for Soups & Chilis saved to prediction_models/Soups_and_Chilis.pkl\n",
+      "Model for Soups & Chilis saved to prediction_models\\Soups_and_Chilis.pkl\n",
       "---------------------------------------\n",
       "--- Processing Category: Breads & Muffins ---\n",
       "Best Parameters for Breads & Muffins: {'criterion': 'squared_error', 'max_depth': 3, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Breads & Muffins: -5238.576348271786\n",
       "Test MSE for Breads & Muffins: 3430.7384905556255\n",
       "Test R^2 Score for Breads & Muffins: 0.7812686630081876\n",
-      "Model for Breads & Muffins saved to prediction_models/Breads_and_Muffins.pkl\n",
+      "Model for Breads & Muffins saved to prediction_models\\Breads_and_Muffins.pkl\n",
       "-----------------------------------------\n",
       "--- Processing Category: Breakfast ---\n",
       "Best Parameters for Breakfast: {'criterion': 'squared_error', 'max_depth': 3, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Breakfast: -5318.56871937539\n",
       "Test MSE for Breakfast: 5566.939383943148\n",
       "Test R^2 Score for Breakfast: 0.5955534556829394\n",
-      "Model for Breakfast saved to prediction_models/Breakfast.pkl\n",
+      "Model for Breakfast saved to prediction_models\\Breakfast.pkl\n",
       "----------------------------------\n",
       "--- Processing Category: Cakes & Cupcakes ---\n",
       "Best Parameters for Cakes & Cupcakes: {'criterion': 'squared_error', 'max_depth': 4, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Cakes & Cupcakes: -4291.581900143338\n",
       "Test MSE for Cakes & Cupcakes: 5393.56799315969\n",
       "Test R^2 Score for Cakes & Cupcakes: 0.6472838617473339\n",
-      "Model for Cakes & Cupcakes saved to prediction_models/Cakes_and_Cupcakes.pkl\n",
+      "Model for Cakes & Cupcakes saved to prediction_models\\Cakes_and_Cupcakes.pkl\n",
       "-----------------------------------------\n",
       "--- Processing Category: Main Dishes ---\n",
       "Best Parameters for Main Dishes: {'criterion': 'squared_error', 'max_depth': 3, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Main Dishes: -5705.485498377557\n",
       "Test MSE for Main Dishes: 4945.551570952734\n",
       "Test R^2 Score for Main Dishes: 0.704424201082541\n",
-      "Model for Main Dishes saved to prediction_models/Main_Dishes.pkl\n",
+      "Model for Main Dishes saved to prediction_models\\Main_Dishes.pkl\n",
       "------------------------------------\n",
       "--- Processing Category: Pies & Tarts ---\n",
       "Best Parameters for Pies & Tarts: {'criterion': 'squared_error', 'max_depth': 3, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Pies & Tarts: -4265.316809293954\n",
       "Test MSE for Pies & Tarts: 2478.624528271081\n",
       "Test R^2 Score for Pies & Tarts: 0.7677903814010416\n",
-      "Model for Pies & Tarts saved to prediction_models/Pies_and_Tarts.pkl\n",
+      "Model for Pies & Tarts saved to prediction_models\\Pies_and_Tarts.pkl\n",
       "-------------------------------------\n",
       "--- Processing Category: Casseroles & Bakes ---\n",
       "Best Parameters for Casseroles & Bakes: {'criterion': 'squared_error', 'max_depth': 2, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Casseroles & Bakes: -7914.224041860953\n",
       "Test MSE for Casseroles & Bakes: 9481.705327358517\n",
       "Test R^2 Score for Casseroles & Bakes: 0.5957217684088851\n",
-      "Model for Casseroles & Bakes saved to prediction_models/Casseroles_and_Bakes.pkl\n",
+      "Model for Casseroles & Bakes saved to prediction_models\\Casseroles_and_Bakes.pkl\n",
       "-------------------------------------------\n",
       "--- Processing Category: Pasta & Lasagna ---\n",
       "Best Parameters for Pasta & Lasagna: {'criterion': 'squared_error', 'max_depth': 2, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Pasta & Lasagna: -5993.891500777494\n",
       "Test MSE for Pasta & Lasagna: 3307.935387397769\n",
       "Test R^2 Score for Pasta & Lasagna: 0.7991793211956737\n",
-      "Model for Pasta & Lasagna saved to prediction_models/Pasta_and_Lasagna.pkl\n",
+      "Model for Pasta & Lasagna saved to prediction_models\\Pasta_and_Lasagna.pkl\n",
       "----------------------------------------\n",
       "--- Processing Category: Salads & Sides ---\n",
       "Best Parameters for Salads & Sides: {'criterion': 'squared_error', 'max_depth': 2, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Salads & Sides: -7734.019494982613\n",
       "Test MSE for Salads & Sides: 7409.9532324589645\n",
       "Test R^2 Score for Salads & Sides: 0.802203041855286\n",
-      "Model for Salads & Sides saved to prediction_models/Salads_and_Sides.pkl\n",
+      "Model for Salads & Sides saved to prediction_models\\Salads_and_Sides.pkl\n",
       "---------------------------------------\n",
       "--- Processing Category: Dessert Specialties ---\n",
       "Best Parameters for Dessert Specialties: {'criterion': 'squared_error', 'max_depth': 4, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Dessert Specialties: -6202.209047919716\n",
       "Test MSE for Dessert Specialties: 4149.577992073426\n",
       "Test R^2 Score for Dessert Specialties: 0.6597625151194106\n",
-      "Model for Dessert Specialties saved to prediction_models/Dessert_Specialties.pkl\n",
+      "Model for Dessert Specialties saved to prediction_models\\Dessert_Specialties.pkl\n",
       "--------------------------------------------\n",
       "--- Processing Category: Bars & Cookies ---\n",
       "Best Parameters for Bars & Cookies: {'criterion': 'squared_error', 'max_depth': 2, 'min_samples_split': 2}\n",
       "Best CV Score (neg MSE) for Bars & Cookies: -9216.275050523775\n",
       "Test MSE for Bars & Cookies: 6245.4200308376785\n",
       "Test R^2 Score for Bars & Cookies: 0.714387596649546\n",
-      "Model for Bars & Cookies saved to prediction_models/Bars_and_Cookies.pkl\n",
+      "Model for Bars & Cookies saved to prediction_models\\Bars_and_Cookies.pkl\n",
       "---------------------------------------\n",
       "\n",
       "--- All categories processed ---\n"
@@ -551,7 +555,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "venv_streamlit",
    "language": "python",
    "name": "python3"
   },
@@ -565,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.9.13"
   },
   "vincent": {
    "sessionId": "8c8018b27eb1032387677f3e_2025-04-18T07-35-10-337Z"
