--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "05307660",
    "metadata": {
     "cellUniqueIdByVincent": "1d790"
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c7ee6a2d",
    "metadata": {
     "cellUniqueIdByVincent": "c17df"
@@ -199,7 +199,7 @@
        "4  Wonderful! I made this for a &#34;Chili/Stew&#...  Soups & Chilis  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "aafcc041",
    "metadata": {
     "cellUniqueIdByVincent": "792fe"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "ce3fdfd2",
    "metadata": {
     "cellUniqueIdByVincent": "9111d"
@@ -340,7 +340,7 @@
        "4               10  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "3ddaae33",
    "metadata": {
     "cellUniqueIdByVincent": "75d4a"
@@ -366,7 +366,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Processing Category: Soups & Chilis ---\n",
+      "--- Processing Category: Soups & Chilis ---"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "Best Parameters for Soups & Chilis: {'criterion': 'squared_error', 'max_depth': 4, 'min_samples_split': 10}\n",
       "Best CV Score (neg MSE) for Soups & Chilis: -6718.710526282198\n",
       "Test MSE for Soups & Chilis: 6762.778641062947\n",
